# SocketPerformanceChecker

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  travis.sh
cmake_modules/: FindEasyFind.cmake
config/: spcBuildSettings.h.in
config/m2etis/: GeneratedChannelConfiguration.h  GeneratedChannelName.h  GeneratedEventTypes.h  GeneratedMessageConfiguration.h
dependencies/: build-boost.bat  build-boost.sh  build-clockUtils.bat  build-clockUtils.sh  build-common.bat  build-common.sh  build-dependencies.bat  build-dependencies.sh  build-m2etis.bat  build-m2etis.sh  download-dependency.sh
gui/tool/: wndMainWindow.ui
include/common/: MessageStructs.h
include/helper/: Helper.h
include/plugins/QtTcp/: QtTcpPlugin.h
include/plugins/QtUdp/: QtUdpPlugin.h
include/plugins/boostTcp/: BoostTcpPlugin.h
include/plugins/boostUdp/: BoostUdpPlugin.h
include/plugins/clockUtilsTcpASync/: ClockUtilsTcpASyncPlugin.h
include/plugins/clockUtilsTcpSync/: ClockUtilsTcpSyncPlugin.h
include/plugins/clockUtilsUdpASync/: ClockUtilsUdpASyncPlugin.h
include/plugins/clockUtilsUdpSync/: ClockUtilsUdpSyncPlugin.h
include/plugins/m2etis/: m2etisPlugin.h
include/tool/plugins/: SocketPluginInterface.h
include/tool/widgets/: AboutDialog.h  LineChartWidget.h  MainWindow.h
resources/common/: icon.rc
src/: CMakeLists.txt
src/common/: MessageStructs.cpp
src/helper/: CMakeLists.txt  Helper.cpp  main.cpp
src/plugins/: CMakeLists.txt
src/plugins/QtTcpPlugin/: CMakeLists.txt  QtTcpPlugin.cpp
src/plugins/QtUdpPlugin/: CMakeLists.txt  QtUdpPlugin.cpp
src/plugins/boostTcpPlugin/: BoostTcpPlugin.cpp  CMakeLists.txt
src/plugins/boostUdpPlugin/: BoostUdpPlugin.cpp  CMakeLists.txt
src/plugins/clockUtilsTcpASyncPlugin/: CMakeLists.txt  ClockUtilsTcpASyncPlugin.cpp
src/plugins/clockUtilsTcpSyncPlugin/: CMakeLists.txt  ClockUtilsTcpSyncPlugin.cpp
src/plugins/clockUtilsUdpASyncPlugin/: CMakeLists.txt  ClockUtilsUdpASyncPlugin.cpp
src/plugins/clockUtilsUdpSyncPlugin/: CMakeLists.txt  ClockUtilsUdpSyncPlugin.cpp
src/plugins/m2etisPlugin/: CMakeLists.txt  m2etisPlugin.cpp
src/tool/: CMakeLists.txt  main.cpp
src/tool/resources/: resources.qrc
src/tool/widgets/: AboutDialog.cpp  LineChartWidget.cpp  MainWindow.cpp
